welcome.lessons.welcome.bat.bool1.PosNeg.scala.error
posNeg:2: error: 'case' expected but '}' found.
  (a,b,negative) match {}
                        ^posNeg:3: error: '}' expected but 'case' found.
  case (i,j,true) => if ((i<0)||(j<0)) {return true} else {return false}
  ^posNeg:3: error: ';' expected but 'else' found.
  case (i,j,true) => if ((i<0)||(j<0)) {return true} else {return false}
                                                     ^posNeg:4: error: illegal start of definition
  case (i,j,false) => if  ((i*j)<0) {return true} else {return false}
  ^posNeg:6: error: eof expected but '}' found.
} 
^